añadidas consultas e ingresos

--- a/ClientApp/src/app/administrador-sistema/pages/administrador-sistema-dashboard/administrador-sistema-dashboard.component.html
+++ b/ClientApp/src/app/administrador-sistema/pages/administrador-sistema-dashboard/administrador-sistema-dashboard.component.html
@@ -1,13 +1,15 @@
 <div class="dashboard-layout">
   <aside class="sidebar">
     <ul>
-      <li><a routerLink="camas" routerLinkActive="active">Gestión de Camas</a></li>
-      <li><a routerLink="asignaciones" routerLinkActive="active">Gestión de Asignaciones</a></li>
-      <li><a routerLink="habitaciones" routerLinkActive="active">Gestión de Habitaciones</a></li>
+      <li><a routerLink="camas" routerLinkActive="active">Camas</a></li>
+      <li><a routerLink="asignaciones" routerLinkActive="active">Asignaciones</a></li>
+      <li><a routerLink="habitaciones" routerLinkActive="active">Habitaciones</a></li>
       <li><a routerLink="historial-altas" routerLinkActive="active">Historial de Altas</a></li>
-      <li><a routerLink="pacientes" routerLinkActive="active">Gestión de Pacientes</a></li>
-      <li><a routerLink="roles" routerLinkActive="active">Gestión de Roles</a></li>
-      <li><a routerLink="usuarios" routerLinkActive="active">Gestión de Usuarios</a></li>
+      <li><a routerLink="pacientes" routerLinkActive="active">Pacientes</a></li>
+      <li><a routerLink="roles" routerLinkActive="active">Roles</a></li>
+      <li><a routerLink="usuarios" routerLinkActive="active">Usuarios</a></li>
+      <li><a routerLink="ingresos" routerLinkActive="active">Ingresos</a></li>
+      <li><a routerLink="consultas" routerLinkActive="active">Consultas</a></li>
 
     </ul>
   </aside>
