--- a/ClientApp/src/app/medico/pages/medico-dashboard/medico-dashboard.component.html
+++ b/ClientApp/src/app/medico/pages/medico-dashboard/medico-dashboard.component.html
@@ -5,6 +5,7 @@
       <li><a routerLink="medico-inicio" routerLinkActive="active" title="Página de inicio del médico">Inicio</a></li>
       <li><a routerLink="buscar-paciente" routerLinkActive="active" title="Buscar pacientes en el sistema">Buscar Paciente</a></li>
       <li><a routerLink="consultas-programadas" routerLinkActive="active" title="Ver las consultas asignadas al médico">Consultas Programadas</a></li>
+      <li><a routerLink="ingresos" routerLinkActive="active" title="Ver pacientes ingresados">Pacientes ingresados</a></li>
     </ul>
   </aside>
 
