--- a/ClientApp/src/app/shared/camas/camas.component.html
+++ b/ClientApp/src/app/shared/camas/camas.component.html
@@ -12,7 +12,7 @@
         <select id="filterEstado" (change)="filtrarPorEstado($event)">
           <option value="">Todos</option>
           <option value="Disponible">Disponible</option>
-          <option value="Ocupada">Ocupada</option>
+          <option value="NoDisponible">Ocupada</option>
         </select>
      
         <label for="filterTipo">Filtrar por tipo:</label>
