--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -100,6 +100,7 @@
         type="number"
         id="idRol"
         formControName="IdRol"
+        required
       />
       <div *ngIf="usuarioForm.get('IdRol')?.invalid && usuarioForm.get('IdRol')?.touched">
         <small *ngIf="usuarioForm.get('IdRol')?.hasError('required')">El rol es requerido</small>
