--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -95,13 +95,13 @@
       <div *ngIf="usuarioForm.get('Contrasenya')?.invalid&&usuarioForm.get('Contrasenya')?.touched">
         <small *ngIf="usuarioForm.get('Contrasenya')?.hasError('required')">La contraseña es requerida</small>
       </div>
-      <label for="idRol">ID Rol:</label>
-      <input
-        type="number"
-        id="idRol"
-        formControName="IdRol"
-        required
-      />
+      <label for="idRol">Rol:</label>
+      <select formControlName="IdRol" required>
+        <option [value]="0" disabled>Selecciona un rol</option>
+        <option *ngFor="let rol of roles" [value]="rol.IdRol">
+          {{ rol.NombreRol }}
+        </option>
+      </select>
       <div *ngIf="usuarioForm.get('IdRol')?.invalid && usuarioForm.get('IdRol')?.touched">
         <small *ngIf="usuarioForm.get('IdRol')?.hasError('required')">El rol es requerido</small>
       </div>
