Revert "adding filter by numss historial altas"
This reverts commit f7d2010af427a2650964a07c0bde19617fc748ea, reversing
changes made to bbce559c2ccf17a202b10b0f4127297deca83dc6.

--- a/ClientApp/src/app/controlador-camas/pages/solicitudes-ingreso/solicitudes-ingreso.component.html
+++ b/ClientApp/src/app/controlador-camas/pages/solicitudes-ingreso/solicitudes-ingreso.component.html
@@ -22,7 +22,7 @@
           <td>{{ solicitud.IdPaciente }}</td>
           <td>{{ solicitud.IdMedico }}</td>
           <td>{{ solicitud.Motivo }}</td>
-          <td>{{ solicitud.FechaSolicitud | date: 'dd/MM/yyyy HH:mm\'h\'' }}</td>
+          <td>{{ solicitud.FechaSolicitud | date: 'dd/MM/yyyy' }}</td>
           <td>{{ solicitud.Estado }}</td>
           <td>
             <!-- Botón para asignar cama -->
