--- a/ClientApp/src/app/medico/pages/ingresos/ingresos.component.html
+++ b/ClientApp/src/app/medico/pages/ingresos/ingresos.component.html
@@ -23,9 +23,9 @@
             <td>{{ ingreso.IdPaciente }}</td>
             <td>{{ ingreso.IdMedico }}</td>
             <td>{{ ingreso.Motivo }}</td>
-            <td>{{ ingreso.FechaSolicitud | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
+            <td>{{ ingreso.FechaSolicitud | date: 'dd/MM/yyyy' }}</td>
             <td>{{ ingreso.Estado }}</td>
-            <td>{{ ingreso.FechaIngreso | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
+            <td>{{ ingreso.FechaIngreso | date: 'dd/MM/yyyy' }}</td>
             <td>
               <!-- Botón para dar de alta -->
               <button (click)="darDeAlta(ingreso)">Dar de Alta</button>
