--- a/ClientApp/src/app/shared/habitaciones/habitaciones.component.css
+++ b/ClientApp/src/app/shared/habitaciones/habitaciones.component.css
@@ -110,14 +110,11 @@ td button:hover {
   box-sizing: border-box;
   margin-bottom: 15px;
 }
-.form-container .formulari{
-  display: grid;
-  grid-template-rows: (7,1fr);
-}
+
 /* Estilo del botón de envío */
 .form-container button {
-  width: 7.4%;
-  padding: 10px ;
+  width: 100%;
+  padding: 10px 20px;
   border: none;
   border-radius: 5px;
   background-color: #28a745;
@@ -126,7 +123,6 @@ td button:hover {
   font-size: 16px;
   transition: background-color 0.3s ease;
   display: inline-flex;
-
 }
 
 .form-container button:hover {
