--- a/ClientApp/src/app/shared/ingresos/ingresos.component.html
+++ b/ClientApp/src/app/shared/ingresos/ingresos.component.html
@@ -20,8 +20,8 @@
             <td>{{ ingreso.IdPaciente }}</td>
             <td>{{ ingreso.IdMedico }}</td>
             <td>{{ ingreso.Motivo }}</td>
-            <td>{{ ingreso.FechaSolicitud | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
-            <td>{{ ingreso.FechaIngreso | date:'dd/MM/yyyy HH:mm\'h\'' }}</td>
+            <td>{{ ingreso.FechaSolicitud | date: 'dd/MM/yyyy' }}</td>
+            <td>{{ ingreso.FechaIngreso | date: 'dd/MM/yyyy' }}</td>
             <td>{{ ingreso.Estado }}</td>
             <td>
               <button (click)="toggleActualizarIngreso(ingreso)">Actualizar</button>
